--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
         }
     </script>
 
-    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.2/dist/flowbite.min.css" />
-
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Shopify | Best E-commerce</title>
 </head>
 
@@ -169,9 +171,11 @@
             <div class="w-[90%] mx-auto md:flex ">
                 <div class=" md:flex ">
                     <div class="my-auto ">
-                        <h1 class="text-dark-green font-bold text-left text-3xl lg:text-5xl lg:leading-normal">Anyone, anywhere can start an
+                        <h1 class="text-dark-green font-bold text-left text-3xl lg:text-5xl lg:leading-normal">Anyone,
+                            anywhere can start an
                             ecommerce <br> website</h1>
-                        <p class="text-gray-500 my-5 font-thin text:xl lg:text-2xl leading-1">Build your eCommerce website to sell,
+                        <p class="text-gray-500 my-5 font-thin text:xl lg:text-2xl leading-1">Build your eCommerce
+                            website to sell,
                             ship, and process payments everywhere</p>
                         <div class="flex flex-col my-8 space-y-3  sm:space-y-0 sm:flex-row sm:justify-center sm:-mx-2">
                             <input id="email" type="text"
@@ -196,7 +200,49 @@
             </div>
         </section>
 
-        
+        <!-- business online -->
+        <section class="bg-dark-green">
+            <div class="w-[90%] mx-auto text-white">
+                <div class="font-normal text-left text-3xl lg:text-4xl lg:leading-normal">
+                    Bring your business online
+                </div>
+                <div class="xl:flex justify-between my-5 text-">
+                    <div class="mb-5">
+                        Create an ecommerce website backed by powerful tools that help you find customers, drive sales,
+                        and
+                        manage your day-to-day.
+                    </div>
+                    <div class="font-bold cursor-pointer">
+                        Explore more examples <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="border-2 border-amber-800 grid grid-cols-2 gap-5 lg:grid-cols-4">
+                    <div>
+                        <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/blue-tokai/home-example-small-4144844351e226a9896cffee4bebdaeecb17897116c33a753bfd086b8b621e74.jpg"
+                            alt="">
+                        <p>FOOD & DRINK <br> <span>Blue Tokai</span></p>
+                    </div>
+                    <div>
+                        <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/quirksmith/home-example-small-8b1c6b138414b76150e6e00f5143c4301a07b708aa6113dd7096f4340ddfecad.jpg"
+                            alt="">
+                        <p>FOOD & DRINK <br> <span>Blue Tokai</span></p>
+                    </div>
+                    <div>
+                        <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/crossbeats/home-example-small-099933088cbe804543fbb1b0963a5d0a16365e73e6000949b5b0ab2bf4b21503.jpg"
+                            alt="">
+                        <p>FOOD & DRINK <br> <span>Blue Tokai</span></p>
+                    </div>
+                    <div>
+                        <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/mcaffeine/home-example-small-26afc247af7a3a7b1c9c585a645ccdff26e76156e98be7d9ff0fe9ecd4d3b675.jpg"
+                            alt="">
+                        <p>FOOD & DRINK <br> <span>Blue Tokai</span></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
     </div>
 
 
