--- a/index.html
+++ b/index.html
@@ -202,40 +202,114 @@
 
         <!-- business online -->
         <section class="bg-dark-green">
-            <div class="w-[90%] mx-auto text-white">
-                <div class="font-normal text-left text-3xl lg:text-4xl lg:leading-normal">
-                    Bring your business online
+            <div class="w-[90%] mx-auto text-white py-16">
+                <div class="">
+                    <div class="font-normal text-left text-3xl lg:text-4xl lg:leading-normal">
+                        Bring your business online
+                    </div>
+                    <div class="xl:flex justify-between my-5 text-">
+                        <div class="mb-5">
+                            Create an ecommerce website backed by powerful tools that help you find customers, drive
+                            sales,
+                            and
+                            manage your day-to-day.
+                        </div>
+                        <div class="font-bold cursor-pointer">
+                            Explore more examples <i class="fa-solid fa-arrow-right"></i>
+                        </div>
+                    </div>
+                    <!-- cards -->
+                    <div class="grid grid-cols-2 gap-5 lg:grid-cols-4">
+                        <div>
+                            <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/blue-tokai/home-example-small-4144844351e226a9896cffee4bebdaeecb17897116c33a753bfd086b8b621e74.jpg"
+                                alt="">
+                            <p class="py-5">FOOD & DRINK <br> <span>Blue Tokai</span></p>
+                        </div>
+                        <div>
+                            <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/quirksmith/home-example-small-8b1c6b138414b76150e6e00f5143c4301a07b708aa6113dd7096f4340ddfecad.jpg"
+                                alt="">
+                            <p class="py-5">FOOD & DRINK <br> <span>Blue Tokai</span></p>
+                        </div>
+                        <div>
+                            <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/crossbeats/home-example-small-099933088cbe804543fbb1b0963a5d0a16365e73e6000949b5b0ab2bf4b21503.jpg"
+                                alt="">
+                            <p class="py-5">FOOD & DRINK <br> <span>Blue Tokai</span></p>
+                        </div>
+                        <div>
+                            <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/mcaffeine/home-example-small-26afc247af7a3a7b1c9c585a645ccdff26e76156e98be7d9ff0fe9ecd4d3b675.jpg"
+                                alt="">
+                            <p class="py-5">FOOD & DRINK <br> <span>Blue Tokai</span></p>
+                        </div>
+                    </div>
                 </div>
-                <div class="xl:flex justify-between my-5 text-">
-                    <div class="mb-5">
-                        Create an ecommerce website backed by powerful tools that help you find customers, drive sales,
-                        and
-                        manage your day-to-day.
+                <div class="py-8">
+                    <div class="font-normal text-left text-3xl lg:text-4xl lg:leading-normal my-8">
+                        Take the best path forward
                     </div>
-                    <div class="font-bold cursor-pointer">
-                        Explore more examples <i class="fa-solid fa-arrow-right"></i>
-                    </div>
-                </div>
-                <div class="border-2 border-amber-800 grid grid-cols-2 gap-5 lg:grid-cols-4">
-                    <div>
-                        <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/blue-tokai/home-example-small-4144844351e226a9896cffee4bebdaeecb17897116c33a753bfd086b8b621e74.jpg"
-                            alt="">
-                        <p>FOOD & DRINK <br> <span>Blue Tokai</span></p>
-                    </div>
-                    <div>
-                        <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/quirksmith/home-example-small-8b1c6b138414b76150e6e00f5143c4301a07b708aa6113dd7096f4340ddfecad.jpg"
-                            alt="">
-                        <p>FOOD & DRINK <br> <span>Blue Tokai</span></p>
-                    </div>
-                    <div>
-                        <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/crossbeats/home-example-small-099933088cbe804543fbb1b0963a5d0a16365e73e6000949b5b0ab2bf4b21503.jpg"
-                            alt="">
-                        <p>FOOD & DRINK <br> <span>Blue Tokai</span></p>
-                    </div>
-                    <div>
-                        <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/mcaffeine/home-example-small-26afc247af7a3a7b1c9c585a645ccdff26e76156e98be7d9ff0fe9ecd4d3b675.jpg"
-                            alt="">
-                        <p>FOOD & DRINK <br> <span>Blue Tokai</span></p>
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
+                        <div>
+                            <svg style="filter: invert(93%) sepia(7%) saturate(290%) hue-rotate(74deg) brightness(107%) contrast(98%);"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 45 45" width="45" height="45">
+                                <path
+                                    d="M41 6a3 3 0 00-3-3H7a3 3 0 00-3 3v31a3 3 0 003 3h6a1 1 0 001-1v-1a1 1 0 00-1-1H7V12h31v2a1 1 0 001 1h1a1 1 0 001-1V6zM11 9H7V6h4zm3 0V6h24v3zm27 12v3a1 1 0 01-1 1h-1a1 1 0 01-1-1v-2h-3v-3h4a2 2 0 012 2zm-.87 10.67L27.5 25.81a1.5 1.5 0 00-2.1 1.68l3.13 14.33A1.5 1.5 0 0029.79 43H30a1.5 1.5 0 001.33-.8l3.07-5.8 5.61-2a1.5 1.5 0 00.14-2.78zm-7.29 2.1a1.5 1.5 0 00-.83.71l-1.43 2.69L29 29.81l6.53 3zM21 33h-3v-5h3zm3 7v1a1 1 0 01-1 1h-3a2 2 0 01-2-2v-4h3v3h2a1 1 0 011 1zm8-18h-5v-3h5zm-12-3h4v3h-3v3h-3v-4a2 2 0 012-2z">
+                                </path>
+                            </svg>
+                            <h1 class="my-5 text-lg">
+                                Start an online business
+                            </h1>
+                            <p class="text-sm font-thin">
+                                Create a business, whether you’ve got a fresh idea or are looking for a new way to make
+                                money.
+                            </p>
+                        </div>
+                        <div>
+                            <svg style="filter: invert(93%) sepia(7%) saturate(290%) hue-rotate(74deg) brightness(107%) contrast(98%);"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 45 45" width="45" height="45">
+                                <path
+                                    d="M41.75 8.67L38 3.11A2.5 2.5 0 0036 2H9a2.5 2.5 0 00-2 1.11L3.25 8.67A1.5 1.5 0 003 9.5v3a7.48 7.48 0 003 6v13A3.5 3.5 0 009.5 35H15v2.5a2.5 2.5 0 01-2.5 2.5H12a1.5 1.5 0 000 3h21a1.5 1.5 0 000-3h-.5a2.5 2.5 0 01-2.5-2.5V35h5.5a3.5 3.5 0 003.5-3.5v-13a7.48 7.48 0 003-6v-3a1.5 1.5 0 00-.25-.83zM9.3 5h26.4l2.66 4H6.64zm17.79 7a1.64 1.64 0 00-.09.5 4.5 4.5 0 01-9 0 1.64 1.64 0 00-.09-.5zM6 12h9.09a1.64 1.64 0 00-.09.5 4.5 4.5 0 01-9 0zm21.61 28H17.39a5.4 5.4 0 00.61-2.5V35h9v2.5a5.4 5.4 0 00.61 2.5zM36 31.5a.5.5 0 01-.5.5h-26a.5.5 0 01-.5-.5V19.85a7.41 7.41 0 001.5.15 7.49 7.49 0 006-3 7.47 7.47 0 0012 0 7.49 7.49 0 006 3 7.41 7.41 0 001.5-.15zM34.5 17a4.51 4.51 0 01-4.5-4.5 1.64 1.64 0 00-.09-.5H39v.5a4.51 4.51 0 01-4.5 4.5z">
+                                </path>
+                            </svg>
+                            <h1 class="my-5 text-lg">
+                                Move your business online
+                            </h1>
+                            <p class="text-sm font-thin">
+                                Turn your retail store into an online store and keep serving customers without missing a
+                                beat.
+                            </p>
+                        </div>
+                        <div>
+                            <svg style="filter: invert(93%) sepia(7%) saturate(290%) hue-rotate(74deg) brightness(107%) contrast(98%);"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 45 45" width="45" height="45">
+                                <path
+                                    d="M42.5 11.82v28a1.5 1.5 0 01-3 0v-27L23 5.46 6.5 12.8v27a1.5 1.5 0 01-3 0v-28a1.5 1.5 0 01.89-1.37l18-8a1.5 1.5 0 011.22 0l18 8a1.5 1.5 0 01.89 1.39zM32.5 28a1.5 1.5 0 00-1.5 1.5A8.48 8.48 0 0117.05 36h2.45a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.5 1.5v6a1.5 1.5 0 003 0v-2.32a11.47 11.47 0 0019-8.68 1.5 1.5 0 00-1.5-1.5zM14 29.5A8.48 8.48 0 0127.95 23H25.5a1.5 1.5 0 000 3h6a1.5 1.5 0 001.5-1.5v-6a1.5 1.5 0 00-3 0v2.32a11.47 11.47 0 00-19 8.68 1.5 1.5 0 003 0z">
+                                </path>
+                            </svg>
+                            <h1 class="my-5 text-lg">Switch to ShopifyStart an online business
+                            </h1>
+                            <p class="text-sm font-thin">
+                                Bring your business to Shopify, no matter which ecommerce platform you’re currently
+                                using.
+                            </p>
+                        </div>
+                        <div>
+                            <svg style="filter: invert(93%) sepia(7%) saturate(290%) hue-rotate(74deg) brightness(107%) contrast(98%);"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 45 45" width="45" height="45">
+                                <path
+                                    d="M12.5 21A6.5 6.5 0 106 14.5a6.5 6.5 0 006.5 6.5zm0-10A3.5 3.5 0 119 14.5a3.5 3.5 0 013.5-3.5zM30 21a8 8 0 10-8-8 8 8 0 008 8zm0-13a5 5 0 11-5 5 5 5 0 015-5zm13 25.5v4a1.5 1.5 0 01-3 0v-4c0-3.77-2.52-6.5-6-6.5h-7.5a6.51 6.51 0 00-6.5 6.5v4a1.5 1.5 0 01-3 0v-4a9.51 9.51 0 019.5-9.5H34c5.13 0 9 4.08 9 9.5zm-27-8a1.5 1.5 0 01-1.5 1.5h-4A5.51 5.51 0 005 32.5V36a1.5 1.5 0 01-3 0v-3.5a8.51 8.51 0 018.5-8.5h4a1.5 1.5 0 011.5 1.5z">
+                                </path>
+                            </svg>
+                            <h1 class="my-5 text-lg">
+                                Hire a Shopify expert
+                            </h1>
+                            <p class="text-sm font-thin">
+                                Get set up with the help of a trusted freelancer or agency from the Shopify Experts
+                                Marketplace.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
