--- a/index.html
+++ b/index.html
@@ -315,8 +315,241 @@
             </div>
         </section>
 
+        <!-- features -->
+        <section>
+            <div class="w-[90%] mx-auto">
+                <section class="text-gray-600 body-font">
+                    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+                        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
+                            <video muted="muted" loop="loop" playsinline="playsinline" data-autoplay="true"
+                                data-lazyload="true"
+                                data-poster="https://cdn.shopify.com/shopifycloud/brochure/assets/home/poster-sell-9a9415a0989001f51a3870a065e65b4cfaa5dbaa250288f60a7e5b6ba4f22394.jpg"
+                                data-event-page="homepage" data-event-category="homepage" data-event-action="sell"
+                                data-event-label="video-toggle" class="video__video" autoplay=""
+                                poster="https://cdn.shopify.com/shopifycloud/brochure/assets/home/poster-sell-9a9415a0989001f51a3870a065e65b4cfaa5dbaa250288f60a7e5b6ba4f22394.jpg">
+                                <source
+                                    data-src="https://cdn.shopify.com/shopifycloud/brochure/assets/home/sell-animation-desktop-1b186d853b04bce6dbc12bb63bd5bc4bc1ff60cd1a06fd12f85261c8acc66d0a.webm"
+                                    type="video/webm"
+                                    src="https://cdn.shopify.com/shopifycloud/brochure/assets/home/sell-animation-desktop-1b186d853b04bce6dbc12bb63bd5bc4bc1ff60cd1a06fd12f85261c8acc66d0a.webm">
+                                <source
+                                    data-src="https://cdn.shopify.com/shopifycloud/brochure/assets/home/sell-animation-desktop-e91e64db2d38816861b2eb3243eb9d8b28225f47269954d9f257cc850bb2f33a.mp4"
+                                    type="video/mp4"
+                                    src="https://cdn.shopify.com/shopifycloud/brochure/assets/home/sell-animation-desktop-e91e64db2d38816861b2eb3243eb9d8b28225f47269954d9f257cc850bb2f33a.mp4">
+                            </video>
+                        </div>
+                        <div
+                            class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+                            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Sell everywhere
+                            </h1>
+                            <p class="mb-8 leading-relaxed">Use one platform to sell products to anyone, anywhere—in
+                                person with Point of Sale and online through your website, social media, and online
+                                marketplaces.</p>
+                            <div class="font-bold cursor-pointer text-light-green">
+                                Explore more examples <i class="fa-solid fa-arrow-right"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="text-gray-600 body-font">
+                    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+                        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
+                            <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/home/market-small-084eab2d72b510555838c446501d27dd7380585450efcaaa97453289b2b69c79.jpg"
+                                alt="">
+                        </div>
+                        <div
+                            class="lg:flex-grow order-first md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+                            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Market your
+                                business
+                            </h1>
+                            <p class="mb-8 leading-relaxed">Take the guesswork out of marketing with built-in tools that
+                                help you create, execute, and analyze digital marketing campaigns.</p>
+                            <div class="font-bold cursor-pointer text-light-green">
+                                Explore how to market your business <i class="fa-solid fa-arrow-right"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="text-gray-600 body-font">
+                    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+                        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
+                            <img src="./assets/order.png" alt="">
+                        </div>
+                        <div
+                            class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+                            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Manage everything
+                            </h1>
+                            <p class="mb-8 leading-relaxed">Gain the insights you need to grow—use a single dashboard to
+                                manage orders, shipping, and payments anywhere you go.</p>
+                            <div class="font-bold cursor-pointer text-light-green">
+                                Explore how to manage your business <i class="fa-solid fa-arrow-right"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </section>
 
 
+        
+
+        <!-- start business section -->
+        <section class="text-gray-600 body-font">
+            <div class="w-[90%] mx-auto">
+                <div class="container px-5 py-24 mx-auto">
+                    <div class="flex flex-col text-center w-full mb-12">
+                        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Start your business
+                            journey with Shopify</h1>
+                        <p class="lg:w-2/3 mx-auto leading-relaxed text-lg">Try Shopify for free, and explore all the
+                            tools and services you need to start, run, and grow your business.</p>
+                    </div>
+                    <div class="p-2 w-full">
+                        <button
+                            class="flex mx-auto text-white bg-light-green hover:bg-dark-green shadow-xl shadow-slate-300 border-0 py-3 mb-8 px-8 rounded text-lg">Start
+                            free trial</button>
+                    </div>
+                    <div class="font-bold cursor-pointer text-center text-lg md:text-2xl md:text-right  text-light-green">
+                        Back to top <i class="fa-solid fa-arrow-up"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="bg-[#002E25]">
+            <div class="w-[90%] mx-auto text-gray-400">
+                <!-- top section -->
+                <div class="text-white flex justify-center md:justify-start gap-5 flex-wrap">
+                    <a class="my-5" href="#">About</a>
+                    <a class="my-5" href="#">Careers</a>
+                    <a class="my-5" href="#">Press and Media</a>
+                    <a class="my-5" href="#">Shopify Plus</a>
+                    <a class="my-5" href="#">Sitemap</a>
+                </div>
+                <div class="bg-light-green h-[0.2px]"></div>
+                <!-- bottom -->
+                <div class="grid grid-cols-6">
+                    <!-- left -->
+                    <div class="col-span-3 sm:grid sm:grid-cols-3 gap-2 ">
+                        <div class="col-span-3 text-white text-lg mt-5">ONLINE STORES</div>
+                        <div>
+                            <div class="my-2 hover:text-white cursor-pointer">Sell Online</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Features</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Examples</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Website builder</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Online reatail</div>
+                        </div>
+                        <div>
+                            <div class="my-2 hover:text-white cursor-pointer">Sell Online</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Features</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Examples</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Website builder</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Online reatail</div>
+                        </div>
+                        <div>
+                            <div class="my-2 hover:text-white cursor-pointer">Sell Online</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Features</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Examples</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Website builder</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Online reatail</div>
+                        </div>
+                    </div>
+
+                    <!-- right -->
+                    <div class="col-span-3 sm:grid grid-cols-3 gap-5">
+                        <div>
+                            <div class="text-white text-lg mt-5">POINT OF SALE</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Sell Online</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Features</div>
+                        </div>
+
+                        <div>
+                            <div class="text-white text-lg mt-5">SUPPORT</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Sell Online</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Features</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Examples</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Website builder</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Online reatail</div>
+                        </div>
+
+                        <div>
+                            <div class="text-white text-lg mt-5">SHOPIFY</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Sell Online</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Features</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Examples</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Website builder</div>
+                            <div class="my-2 hover:text-white cursor-pointer">Online reatail</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-light-green h-[0.2px] mt-16"></div>
+            <div class="flex justify-between">
+                <div class="w-[90%] mx-auto flex justify-between my-5 flex-col md:flex-row gap-5">
+                    <!-- media icons -->
+                    <div class="flex gap-5 flex-wrap justify-center mx-auto">
+                        <svg style="filter: invert(100%) sepia(1%) saturate(1972%) hue-rotate(48deg) brightness(118%) contrast(99%);"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 30 30" width="30" height="30">
+                            <path
+                                d="M15.6 30V19.4h5V15h-5v-3.1c0-1 .6-1.9 1.3-1.9h3.8V5.6h-3.8c-3.1 0-5.6 2.8-5.6 6.3V15H7.5v4.4h3.8v10.1C4.8 27.9 0 22 0 15 0 6.7 6.7 0 15 0s15 6.7 15 15c0 8.1-6.4 14.7-14.4 15z">
+                            </path>
+                        </svg>
+                        <svg style="filter: invert(100%) sepia(1%) saturate(1972%) hue-rotate(48deg) brightness(118%) contrast(99%);"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 30 30" width="30" height="30">
+                            <path
+                                d="M30 15c0 8.3-6.7 15-15 15S0 23.3 0 15 6.7 0 15 0s15 6.7 15 15zm-3.7-5.5c-.8.3-1.6.6-2.5.7.9-.5 1.5-1.4 1.8-2.4-.8.5-1.7.8-2.7 1-.8-.8-1.9-1.4-3.1-1.4-2.4 0-4.2 1.9-4.2 4.3 0 .3 0 .7.1 1-3.5-.2-6.7-1.9-8.8-4.5-.3.7-.6 1.4-.6 2.2 0 1.5.7 2.8 1.9 3.5-.7 0-1.4-.2-1.9-.5 0 2.1 1.5 3.8 3.4 4.2-.3.1-.7.1-1.1.1-.3 0-.6 0-.8-.1.5 1.7 2.1 2.8 4 2.9-1.5 1.1-3.3 1.9-5.3 1.9-.3 0-.7 0-1-.1 1.9 1.2 4.1 1.9 6.5 1.9 7.8 0 12.1-6.5 12.1-12.1v-.6c.9-.4 1.6-1.2 2.2-2z">
+                            </path>
+                        </svg>
+                        <svg style="filter: invert(100%) sepia(1%) saturate(1972%) hue-rotate(48deg) brightness(118%) contrast(99%);"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 30 30" width="30" height="30">
+                            <path
+                                d="M30 15c0 8.3-6.7 15-15 15S0 23.3 0 15 6.7 0 15 0s15 6.7 15 15zm-5.6 0c0-6.9 0-6.9-9.4-6.9s-9.4 0-9.4 6.9 0 6.9 9.4 6.9 9.4 0 9.4-6.9zm-11.9-3.7l6.3 3.8-6.3 3.8v-7.6z">
+                            </path>
+                        </svg>
+                        <svg style="filter: invert(100%) sepia(1%) saturate(1972%) hue-rotate(48deg) brightness(118%) contrast(99%);"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 18 18" width="30" height="30">
+                            <defs></defs>
+                            <path fill-rule="evenodd"
+                                d="M9 0c5 0 9 4 9 9s-4 9-9 9-9-4-9-9 4-9 9-9zM6.7 3.5h4.7c1.8 0 3.2 1.4 3.2 3.1v4.7c0 1.7-1.4 3.1-3.2 3.1H6.7c-1.8 0-3.2-1.4-3.2-3.1V6.7c0-1.8 1.4-3.2 3.2-3.2zM9 6.2c1.6 0 2.9 1.3 2.9 2.9S10.6 12 9 12s-3-1.3-3-2.9 1.3-2.9 3-2.9zm0 1.2c.9 0 1.7.8 1.7 1.7 0 .9-.8 1.7-1.7 1.7-.9 0-1.7-.8-1.7-1.7 0-.9.7-1.7 1.7-1.7zm2.8-1.7c.3 0 .6.2.6.6 0 .3-.2.6-.6.6-.3 0-.6-.2-.6-.6 0-.4.3-.6.6-.6zm-4.6-1h3.7c1.4 0 2.5 1.1 2.5 2.5v3.7c0 1.4-1.1 2.5-2.5 2.5H7.2c-1.4 0-2.5-1.1-2.5-2.5V7.2c-.1-1.4 1.1-2.5 2.5-2.5z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                        <svg style="filter: invert(100%) sepia(1%) saturate(1972%) hue-rotate(48deg) brightness(118%) contrast(99%);"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 30 30" width="30" height="30">
+                            <path
+                                d="M30 15c0 8.3-6.7 15-15 15S0 23.3 0 15 6.7 0 15 0s15 6.7 15 15zM11.3 7.8c0-1.2-1-2.2-2.5-2.2s-2.5.9-2.5 2.2c0 1.2 1 2.2 2.5 2.2s2.5-1 2.5-2.2zm-.7 4.1H6.9v10.6h3.8V11.9zm13.8 5c0-3.4-1.7-5.6-4.4-5.6-1.5 0-2.6.9-3.1 2.3l-.1-1.6H13c0 .4.1 2.5.1 2.5v8.1h3.8V17c0-1.5.7-2.5 1.8-2.5s1.9.6 1.9 2.5v5.6h3.8v-5.7z">
+                            </path>
+                        </svg>
+                        <svg style="filter: invert(100%) sepia(1%) saturate(1972%) hue-rotate(48deg) brightness(118%) contrast(99%);"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 30 30" width="30" height="30">
+                            <path
+                                d="M15 30c-1.5 0-2.9-.2-4.3-.6.6-.9 1.2-2 1.5-3.2.2-.7 1-4.1 1-4.1.5 1 2 1.9 3.7 1.9 4.8 0 8.1-4.4 8.1-10.3 0-4.4-3.8-8.6-9.5-8.6-7.1-.1-10.6 5-10.6 9.3 0 2.6 1 4.9 3.1 5.7.3.1.7 0 .8-.4.1-.2.2-.9.3-1.2.1-.4 0-.5-.2-.8-.6-.7-1-1.6-1-3 0-3.8 2.8-7.2 7.4-7.2 4 0 6.2 2.5 6.2 5.8 0 4.3-1.9 8-4.8 8-1.6 0-2.7-1.3-2.4-2.9.5-1.9 1.3-4 1.3-5.3 0-1.2-.7-2.3-2-2.3-1.6 0-2.9 1.7-2.9 3.9 0 1.4.5 2.4.5 2.4S9.5 24 9.3 25.3c-.3 1.1-.4 2.4-.3 3.5-5.3-2.4-9-7.7-9-13.8C0 6.7 6.7 0 15 0s15 6.7 15 15-6.7 15-15 15z">
+                            </path>
+                        </svg>
+                    </div>
+
+                    <!-- terms & policy -->
+                    <div class="flex text-gray-400 gap-5 mx-auto flex-wrap justify-center">
+                        <div class="hover:text-white">Terms of Service</div>
+                        <div class="hover:text-white">Privacy Policy</div>
+                        <div class="flex gap-2">
+                            <svg fill="#FFF" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 45 45" width="30" height="30">
+                                <path
+                                    d="M22.5 2A20.5 20.5 0 1043 22.5 20.52 20.52 0 0022.5 2zm-4.23 28.79A33.67 33.67 0 0022 31a34.54 34.54 0 004.76-.33 30.45 30.45 0 01-4.26 9 30.41 30.41 0 01-4.23-8.88zM22 28a29.86 29.86 0 01-4.47-.34A31 31 0 0117 22a29.87 29.87 0 01.36-4.64A30.13 30.13 0 0122 17a31 31 0 015.66.53A29.85 29.85 0 0128 22a31 31 0 01-.5 5.5 31 31 0 01-5.5.5zm-7.64-1a25.22 25.22 0 01-9.15-4.5 24.89 24.89 0 019-4.48A33.56 33.56 0 0014 22a34.61 34.61 0 00.36 5zM22.5 5.21a25.25 25.25 0 014.5 9.15 34.61 34.61 0 00-5-.36 33.58 33.58 0 00-4 .24 25.24 25.24 0 014.5-9.03zm8.29 13.06a30.41 30.41 0 018.89 4.23 30.46 30.46 0 01-9 4.26A34.54 34.54 0 0031 22a33.67 33.67 0 00-.21-3.73zm8.82.59A33.75 33.75 0 0030.26 15a29.2 29.2 0 00-3.89-9.56 17.54 17.54 0 0113.24 13.42zm-21-13.41a29.16 29.16 0 00-3.85 9.35 29.16 29.16 0 00-9.35 3.85A17.54 17.54 0 0118.64 5.44zM5.44 26.36a29.2 29.2 0 009.56 3.9 33.75 33.75 0 003.86 9.36A17.54 17.54 0 015.44 26.36zm20.7 13.25a33.73 33.73 0 003.91-9.56 33.73 33.73 0 009.56-3.91 17.55 17.55 0 01-13.47 13.47z">
+                                </path>
+                            </svg>
+                            <p class="hover:text-white"> India <i class="fa-solid fa-caret-down"></i></p>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 
 
