help section complete

--- a/index.html
+++ b/index.html
@@ -390,7 +390,47 @@
         </section>
 
 
-        
+        <!-- help section -->
+        <section>
+            <div class="mx-auto">
+                <div class="lg:flex mx-auto">
+                    <div class="w-[100%]  py-12 px-12 md:py-24 md:pl-24">
+                        <h1 class="text-2xl md:text-4xl font-thin">
+                            Get the help you need, <br> every step of the way
+                        </h1>
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 my-10">
+                            <div>
+                                <h1 class="text-xl">Shopify support</h1>
+                                <p class="text-gray-600 my-3 font-thin">Contact support 24/7, whether you’re troubleshooting issues or looking for business
+                                    advice.</p>
+                                <div class="font-bold cursor-pointer text-light-green">
+                                    Contact Support <i class="fa-solid fa-arrow-right"></i>
+                                </div>
+                            </div>
+                            <div>
+                                <h1 class="text-xl">Shopify App Store</h1>
+                                <p class="text-gray-600 my-3 font-thin">Add features and functionality to your business with 6,000+ apps that integrate
+                                    directly with Shopify.</p>
+                                <div class="font-bold cursor-pointer text-light-green">
+                                    Visit the Shopify App Store <i class="fa-solid fa-arrow-right"></i>
+                                </div>
+                            </div>
+                            <div>
+                                <h1 class="text-xl">Shopify Experts Marketplace</h1>
+                                <p class="text-gray-600 my-3 font-thin">Hire a Shopify expert to help you with everything from store setup to SEO.</p>
+                                <div class="font-bold cursor-pointer text-light-green">
+                                    Explore the Shopify Experts Marketplace <i class="fa-solid fa-arrow-right"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-[100%]">
+                        <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/home/help@desktop-2x-2929e8d420327b708cb9452bf940e92a426145bd07f88ad410db628513e571d4.jpg"
+                            alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- start business section -->
         <section class="text-gray-600 body-font">
@@ -407,7 +447,8 @@
                             class="flex mx-auto text-white bg-light-green hover:bg-dark-green shadow-xl shadow-slate-300 border-0 py-3 mb-8 px-8 rounded text-lg">Start
                             free trial</button>
                     </div>
-                    <div class="font-bold cursor-pointer text-center text-lg md:text-2xl md:text-right  text-light-green">
+                    <div
+                        class="font-bold cursor-pointer text-center text-lg md:text-2xl md:text-right  text-light-green">
                         Back to top <i class="fa-solid fa-arrow-up"></i>
                     </div>
                 </div>
