launch section complete

--- a/index.html
+++ b/index.html
@@ -389,6 +389,33 @@
             </div>
         </section>
 
+        <!-- launch  -->
+        <section class="bg-bg-green lg:py-24">
+            <div class="w-[90%] mx-auto mb-12 text-3xl text-dark-green">Explore more from Shopify in India</div>
+            <div class="bg-white lg:flex lg:shadow-lg  w-[90%] mx-auto ">
+                <div class="lg:w-1/2 md:order-last">
+                    <div class="h-64 bg-cover bg-center lg:h-full"
+                        style="background-image:url('https://cdn.shopify.com/shopifycloud/brochure/assets/home/card-collection/india-experts-small-432c16e7cd8ec09f3ae3aca42c58775001d5dc511e70608476ed7ee0e2d2e2c5.jpg')">
+                    </div>
+                </div>
+
+                <div class="px-6 py-12 lg:w-1/2">
+                    <p>START</p>
+                    <h2 class="text-xl my-5 text-gray-800 md:text-2xl">Launch your store with the help of a
+                        Shopify Expert
+                    </h2>
+                    <p class="mt-4 text-gray-600 mb-7">Find hundreds of experts from India ready to help you get your
+                        store
+                        up and running, from choosing a theme to building a fully customized site.</p>
+
+                    <div class="font-bold cursor-pointer text-light-green">
+                        Browse Experts in India <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 
         <!-- help section -->
         <section>
@@ -401,7 +428,8 @@
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 my-10">
                             <div>
                                 <h1 class="text-xl">Shopify support</h1>
-                                <p class="text-gray-600 my-3 font-thin">Contact support 24/7, whether you’re troubleshooting issues or looking for business
+                                <p class="text-gray-600 my-3 font-thin">Contact support 24/7, whether you’re
+                                    troubleshooting issues or looking for business
                                     advice.</p>
                                 <div class="font-bold cursor-pointer text-light-green">
                                     Contact Support <i class="fa-solid fa-arrow-right"></i>
@@ -409,7 +437,8 @@
                             </div>
                             <div>
                                 <h1 class="text-xl">Shopify App Store</h1>
-                                <p class="text-gray-600 my-3 font-thin">Add features and functionality to your business with 6,000+ apps that integrate
+                                <p class="text-gray-600 my-3 font-thin">Add features and functionality to your business
+                                    with 6,000+ apps that integrate
                                     directly with Shopify.</p>
                                 <div class="font-bold cursor-pointer text-light-green">
                                     Visit the Shopify App Store <i class="fa-solid fa-arrow-right"></i>
@@ -417,7 +446,8 @@
                             </div>
                             <div>
                                 <h1 class="text-xl">Shopify Experts Marketplace</h1>
-                                <p class="text-gray-600 my-3 font-thin">Hire a Shopify expert to help you with everything from store setup to SEO.</p>
+                                <p class="text-gray-600 my-3 font-thin">Hire a Shopify expert to help you with
+                                    everything from store setup to SEO.</p>
                                 <div class="font-bold cursor-pointer text-light-green">
                                     Explore the Shopify Experts Marketplace <i class="fa-solid fa-arrow-right"></i>
                                 </div>
