--- a/index.html
+++ b/index.html
@@ -415,10 +415,73 @@
             </div>
         </section>
 
+        <!-- globe -->
+        <section>
+            <div class="w-[90%] mx-auto my-10">
+                <!-- text -->
+                <div class="md:w-[60%] ">
+                    <h2 class="text-2xl my-5 text-black md:text-4xl">Empowering independent business owners everywhere
+                    </h2>
+                    <p class="mt-4 text-lg text-gray-800 mb-7 md:text-xl">Millions of businesses in <span
+                            class="text-black font-semibold">175 countries</span> around the
+                        world have
+                        made over <span class="text-black font-semibold">$496 billion USD</span> in sales using Shopify.
+                    </p>
 
+                    <div class="font-bold cursor-pointer text-light-green">
+                        Learn more about Shopify <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                </div>
+
+                <!-- globe -->
+                <div class="">
+                    <img class="object-center " src="./assets/globe.png" alt="">
+                </div>
+
+                <!-- seller -->
+                <div class="md:flex bg-dark-green">
+                    <div class="w-full ">
+                        <img class="h-full object-cover"
+                            src="https://cdn.shopify.com/shopifycloud/brochure/assets/merchants/alicia-souza/alicia-souza-testimonial@desktop-d947199e09069edaf78e332d87ba932b45805e3c91d032ba8a083a6f67ad04b5.jpg"
+                            alt="">
+                    </div>
+                    <div class="p-5 md:p-20 w-full text-center text-white">
+                        <div class="text-xl md:text-4xl leading-normal">
+                            “Shopify was my knight in shining armor when I exhausted every other possibility of getting
+                            my online store up and running. It was stunningly easy to use, with more features and
+                            plug-ins that I didn’t even know I wanted.”
+                        </div>
+                        <div class="">
+                            <img class="mx-auto my-5"
+                                src="https://cdn.shopify.com/shopifycloud/brochure/assets/home/testimonials/logo-alicia-souza-small-4ac1bd956b9bf4d8fd78b6597f24ba9379714861042d3a199065b704a11657e6.png"
+                                alt="">
+                        </div>
+                        <p>Alicia | Alicia Souza</p>
+                    </div>
+                </div>
+
+                <!-- brands -->
+                <div class="flex justify-center md:justify-around flex-wrap gap-5 py-10">
+                    <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/logo-soup/bajaao-small-6ca0459c2a2fc6a57654d85cd1f053828d7fee97ecf7ff6dd8a1c460d0a5d344.png"
+                        alt="">
+                    <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/logo-soup/johnjacobs-small-79aa379de8a1c0d6df1c33af8c63a677871164315ccbc495423aeaead650d53a.png"
+                        alt="">
+                    <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/logo-soup/kylie-small-4e25b192755f809e9795d9f3722f3fa6b46da1fdc2a48b3ec8b6311f50f83ac7.png"
+                        alt="">
+                    <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/logo-soup/nush-small-04d75ec8d5b3e20b6e227006c23759c8b65efd482808aff0fc17140c5efb36cc.png"
+                        alt="">
+                    <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/logo-soup/starstruck-small-6d49ff528f3ef3217015f906a1ece473e2559688669d00e2b88e7be4f65ce3bf.png"
+                        alt="">
+                    <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/logo-soup/mcaffeine-small-0c55170838a60e6a490dac7732d44f988f754de89d790de26b0d8e50a01029b4.png"
+                        alt="">
+                    <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/logo-soup/yogabar-small-a41c8bbe605289256552b537eb1bbf993845442c3af43ff4f8f1ed932a7b3609.png"
+                        alt="">
+                </div>
+            </div>
+        </section>
 
         <!-- help section -->
-        <section>
+        <section class="bg-yellow">
             <div class="mx-auto">
                 <div class="lg:flex mx-auto">
                     <div class="w-[100%]  py-12 px-12 md:py-24 md:pl-24">
