--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
                                 </button>
                             </div>
                         </div>
+
+                        <!-- left links -->
                         <div id="myDIV" class="flex flex-col mt-2 md:flex-row md:mt-0 md:mx-1 block">
                             <button id="dropdownDividerButton" data-dropdown-toggle="dropdownDivider"
                                 class="font-medium rounded-lg text-md px-4 py-2.5 text-center inline-flex items-center"
@@ -318,8 +320,14 @@
         <!-- features -->
         <section>
             <div class="w-[90%] mx-auto">
+                <div class="my-8 md:my-12 md:w-[50%] mx-auto">
+                    <h1 class="text-center text-2xl md:text-4xl py-6">With you wherever you’re going</h1>
+                    <p class="text-center text-gray-600 text-base md:text-xl">One platform with all the ecommerce and
+                        point of sale features you need to start, run, and grow your
+                        business.</p>
+                </div>
                 <section class="text-gray-600 body-font">
-                    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+                    <div class="container mx-auto flex px-5 md:flex-row flex-col items-center">
                         <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
                             <video muted="muted" loop="loop" playsinline="playsinline" data-autoplay="true"
                                 data-lazyload="true"
@@ -351,13 +359,13 @@
                     </div>
                 </section>
                 <section class="text-gray-600 body-font">
-                    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+                    <div class="container mx-auto flex px-5 py-12 md:flex-row flex-col items-center">
                         <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
                             <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/home/market-small-084eab2d72b510555838c446501d27dd7380585450efcaaa97453289b2b69c79.jpg"
                                 alt="">
                         </div>
                         <div
-                            class="lg:flex-grow order-first md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+                            class="lg:flex-grow md:order-first md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
                             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Market your
                                 business
                             </h1>
@@ -370,7 +378,7 @@
                     </div>
                 </section>
                 <section class="text-gray-600 body-font">
-                    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+                    <div class="container mx-auto flex px-5 md:flex-row flex-col items-center">
                         <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
                             <img src="./assets/order.png" alt="">
                         </div>
@@ -390,7 +398,7 @@
         </section>
 
         <!-- launch  -->
-        <section class="bg-bg-green lg:py-24">
+        <section class="bg-bg-green py-12 lg:py-24">
             <div class="w-[90%] mx-auto mb-12 text-3xl text-dark-green">Explore more from Shopify in India</div>
             <div class="bg-white lg:flex lg:shadow-lg  w-[90%] mx-auto ">
                 <div class="lg:w-1/2 md:order-last">
@@ -687,11 +695,13 @@
     </div>
 
 
-    <script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
+    <!-- <script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script> -->
     <script>
         function myFunction() {
             var x = document.getElementById("myDIV");
+            console.log(x)
             var y = document.getElementById("myDIV2");
+            console.log(y)
             x.classList.toggle("hidden");
             y.classList.toggle("hidden");
         }
