navbar dropdown fixed

--- a/index.html
+++ b/index.html
@@ -695,6 +695,7 @@
     </div>
 
 
+    <script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
     <script>
         function myFunction() {
             var x = document.getElementById("myDIV");
